After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 788127 - glmixer: Fix Unmap video frame in error case
glmixer: Fix Unmap video frame in error case
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.13.x
Other All
: Normal normal
: 1.13.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-09-25 12:16 UTC by Ponnam Srinivas
Modified: 2017-09-26 08:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
attached patch (923 bytes, patch)
2017-09-25 12:16 UTC, Ponnam Srinivas
committed Details | Review

Description Ponnam Srinivas 2017-09-25 12:16:39 UTC
Created attachment 360345 [details] [review]
attached patch

Hi,
  
  In gst_gl_mixer_process_textures() function, missed Unmap video frame in failed case
  
  code:
  out_tex = (GstGLMemory *) out_frame.map[0].memory;

  if (!gst_aggregator_iterate_sinkpads (GST_AGGREGATOR (mix),
          (GstAggregatorPadForeachFunc) _upload_frames, NULL))
    return FALSE;
	
  sol: gst_video_frame_unmap (&out_frame); added 
  Patch attached. Please review and share feedback.

Thanks.
Comment 1 Sebastian Dröge (slomo) 2017-09-26 08:12:47 UTC
commit 4b051ea36d36aa87ada61e922ee030c71d7257c8 (HEAD -> master)
Author: Ponnam Srinivas <p.srinivas@samsung.com>
Date:   Mon Sep 25 17:20:58 2017 +0530

    glmixer: Unmap video frame in error case
    
    https://bugzilla.gnome.org/show_bug.cgi?id=788127